--- a/css/style.css
+++ b/css/style.css
@@ -1,111 +1,101 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-@font-face {
-  font-family: "Nexa";
-  src: url("../fonts/Nexa/Nexa-Regular.otf") format("woof");
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Playfair+Display:ital,wght@0,400;0,700;1,700&display=swap");
+
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 1920px;
-  margin: 0 auto;
-  height: 20vh;
-}
-nav ul {
-  display: flex;
-  list-style: none;
-}
-nav a {
-  text-decoration: none;
-  padding: 0 2rem 0 5rem;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 1.25em;
-  color: rgba(35, 31, 32, 1);
-  transition: all 0.4s ease;
-}
-nav a:hover {
-  color: rgb(205, 168, 96);
-}
-header,
-.mother-child {
-  display: flex;
-  flex-direction: column;
-  max-width: 20%;
-  margin: 0 auto;
-  align-items: center;
-}
-.no-slogan {
-  max-width: 50%;
-  padding-bottom: 4rem;
-}
-img {
+
+body {
+  background: rgb(255, 255, 255);
   width: 100%;
-  display: block;
-}
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 1920px;
-  margin: 0 auto;
-  margin-top: 2rem;
+  font-family: "Playfair Display", serif;
 }
 
-.baby-img {
+.container {
+  position: relative;
+  max-width: 1480px;
+  margin: 0 auto;
+  /* height: 100vh; */
+}
+
+.container img {
+  display: block;
+  width: 100%;
+}
+
+.background {
+  width: 100%;
   position: relative;
 }
-.coming-soon {
+
+.logo {
   position: absolute;
-  top: 50%;
-  left: 53%;
-  transform: translate(-50%, -50%);
+  top: 4%;
+  right: 30%;
+  width: 11%;
 }
-.mother-child {
-  margin: 4rem auto;
+.slogan {
+  width: 30%;
+  position: absolute;
+  top: 22%;
+  right: 19%;
 }
-button {
-  border-radius: 50rem;
-  padding: 0.9rem 2.5rem;
-  color: rgba(35, 31, 32, 1);
-  font-size: 1.1rem;
-  font-family: "Nexa", sans-serif;
-  font-weight: 300;
-  border: solid 2px transparent;
-  background-image: linear-gradient(
-      rgba(255, 255, 255, 0),
-      rgba(255, 255, 255, 0)
-    ),
-    linear-gradient(
-      130deg,
-      rgb(216, 179, 118),
-      rgb(220, 185, 122),
-      rgb(233, 202, 132),
-      rgb(237, 208, 136),
-      rgb(199, 164, 88),
-      rgb(168, 128, 49),
-      rgb(174, 136, 57),
-      rgb(192, 156, 80),
-      rgb(221, 190, 116),
-      rgb(237, 208, 136)
-    );
-  background-origin: border-box;
-  background-clip: content-box, border-box;
-  box-shadow: 2px 1000px 1px #fff inset;
-  cursor: pointer;
-  transition: all 0.4s ease;
+.bonjour {
+  position: absolute;
+  width: 30%;
+  top: 29%;
+  right: 19%;
+  background: transparent;
+  color: white;
+  text-align: center;
 }
-button:hover {
-  box-shadow: none;
-  color: rgb(255, 255, 255);
+.bonjour p {
+  font-size: 1.9rem;
 }
-.pexels-artem-podrez {
-  position: relative;
-  bottom: 26px;
-  z-index: -1;
+.the {
+  font-weight: 700;
+  font-style: italic;
+}
+h1 {
+  margin-bottom: 0.7rem;
+  font-weight: 700;
+}
+.information-text {
+  position: absolute;
+  top: 49%;
+  right: 19%;
+  width: 30%;
+  padding: 0 5rem 0 2rem;
+  color: white;
+}
+.input {
+  position: absolute;
+  top: 58%;
+  right: 20%;
+  width: 31.4%;
+}
+.input-field {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.input-field input {
+  padding: 0.8rem 2rem;
+  border: none;
+}
+.input-field input[type="button"] {
+  background: black;
+  color: white;
+  border-radius: 0 5px 5px 0;
+  margin-left: 3px;
+}
+.input-field input[type="email"] {
+  border-radius: 5px 0 0 5px;
 }
