--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,26 @@ h1 {
   display: block !important;
 }
 
+.tableContainer {
+  text-align: center;
+  width: 100%;
+  margin: 1rem 0;
+}
+table {
+  width: 60%;
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
+}
+table,
+th,
+td {
+  border: 1px solid rgb(210, 207, 207);
+}
+th,
+td {
+  padding: 1rem;
+}
+
 @media (max-width: 1480px) {
   .bonjour h1 {
     font-size: 1.5rem;
